<resources>
    <string name="app_name">Clothes Store App</string>

    <!-- Activities titles -->
    <string name="catalog_activity_title">Products Catalog</string>
    <string name="detail_activity_title">Product Details</string>
    <string name="editor_activity_add_title">Add Product</string>
    <string name="editor_activity_edit_title">Edit Product</string>
    <string name="catalog_activity_title_all">All Products Catalog</string>
    <string name="catalog_activity_title_tshirt">T-shirts Catalog</string>
    <string name="catalog_activity_title_shirt">Shirts Catalog</string>
    <string name="catalog_activity_title_trousers">Trousers Catalog</string>
    <string name="catalog_activity_title_skirt">Skirts Catalog</string>
    <string name="catalog_activity_title_dress">Dresses Catalog</string>
    <string name="catalog_activity_title_other">Other Products Catalog</string>

    <!-- Product Overview Label [CHAR LIMIT=20] -->
    <string name="product_overview_label">Overview</string>

    <!-- Product Name hint for EditText [CHAR LIMIT=20] -->
    <string name="product_overview_edit_text_hint">Name</string>

    <!-- Product Price Label [CHAR LIMIT=20] -->
    <string name="product_price_label">Price</string>

    <!-- Product Price hint for EditText [CHAR LIMIT=20] -->
    <string name="product_price_edit_text_hint">f.e. 45.99</string>

    <!-- Product Price Currency [CHAR LIMIT=3] -->
    <string name="product_price_currency">pln</string>

    <!-- Product Quantity Label [CHAR LIMIT=20] -->
    <string name="product_quantity_label">Quantity</string>

    <!-- Product Quantity hint for EditText [CHAR LIMIT=20] -->
    <string name="product_quantity_edit_text_hint">f.e. 8</string>

    <!-- Product Supplier Label [CHAR LIMIT=20] -->
    <string name="product_supplier_label">Supplier</string>

    <!-- Product Supplier Label [CHAR LIMIT=20] -->
    <string name="product_supplier_phone_label">Supplier Phone</string>

    <!-- Product Supplier name hint for EditText [CHAR LIMIT=20] -->
    <string name="product_supplier_edit_text_hint_name">Name</string>

    <!-- Product Supplier phone hint for EditText [CHAR LIMIT=20] -->
    <string name="product_supplier_edit_text_hint_phone">Phone</string>

    <!-- Product Category Label [CHAR LIMIT=20] -->
    <string name="product_category_label">Category</string>

    <!-- Category Array Strings -->
    <string name="category_all">All</string>
    <string name="category_other">Other</string>
    <string name="category_tshirt">T-shirt</string>
    <string name="category_shirt">Shirt</string>
    <string name="category_trousers">Trousers</string>
    <string name="category_dress">Dress</string>
    <string name="category_skirt">Skirt</string>

    <!-- Menu strings -->
    <!-- Menu Editor Activity -->
    <string name="menu_editor_save">Save</string>

    <!-- Menu Detail Activity -->
    <string name="menu_detail_edit">edit</string>
    <string name="menu_detail_delete">delete</string>

    <!-- Menu Category Activity -->
    <string name="menu_category_insert">Insert example Product</string>
    <string name="menu_category_delete_all">Delete all the products</string>
    <string name="menu_category_filter">Filter</string>

    <!-- Detail Activity Strings -->
    <string name="list_item_quantity_text">items in stock</string>
    <string name="list_item_category_text">category:</string>
    <string name="list_item_price_text">pln</string>
    <string name="list_item_button_text">sell</string>

    <!-- Editor Activity toasts for invalid data -->
    <string name="toast_invalid_name">Product requires name</string>
    <string name="toast_invalid_price">Price must be specified</string>
    <string name="toast_invalid_price_number">Price must be more than 0</string>
    <string name="toast_invalid_supplier">Supplier Name must be specified</string>
    <string name="toast_invalid_phone">Supplier Phone must be specified</string>
    <string name="toast_invalid_phone_digits">Supplier Phone must have 9 digits</string>

    <!-- Inserting Product -->
    <string name="toast_new_insertion_failed">Failed to add new Product</string>
    <string name="toast_new_insertion_successful">New Product added</string>

    <!-- Updating product -->
    <string name="toast_update_failed">Failed to update Product</string>
    <string name="toast_update_change_data">Put new data for Product update</string>
    <string name="toast_update_successful">Product updated</string>

    <!-- Delete product -->
    <string name="dialog_delete_message">Delete Product?</string>
    <string name="dialog_delete_positive_button">Delete</string>
    <string name="dialog_delete_negative_button">Cancel</string>
    <string name="toast_single_product_delete">Product deleted</string>

    <!--Delete all products -->
    <string name="dialog_delete_all_message">Delete all Products?</string>
    <string name="dialog_delete_all_positive_button">Delete All</string>
    <string name="dialog_delete_all_negative_button">Cancel</string>
    <string name="toast_all_products_delete">All Products deleted</string>

    <!-- Sell Product -->
    <string name="toast_sell_zero">You have no Products to sell</string>
    <string name="toast_sell_sold">Product sold</string>

    <!-- Unsaved Changes Dialog -->
    <string name="dialog_unsaved_message">Discard changes and leave?</string>
    <string name="dialog_unsaved_positive_button">Discard</string>
    <string name="dialog_unsaved_negative_button">Keep editing</string>

    <!-- Filter Dialog within Catalog Activity -->
    <string name="dialog_filter_title">Show Category</string>
    <string name="dialog_filter_positive_button">Show</string>
    <string name="dialog_filter_nagetive_button">Cancel</string>
    <string name="shared_preference_category_key">SHARED_PREFERENCE_CATEGORY</string>


</resources>
