<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.clothesstoreapp.EditorActivity">

    <!-- Product Name Field -->
    <LinearLayout
        android:id="@+id/product_name_field"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_editor_single_view_height"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/product_price_field"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="@dimen/activity_editor_layout_padding">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/InputTitleTextViewStyle"
            android:text="@string/product_overview_label"/>

        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/product_overview_edit_text_hint"
            android:inputType="textCapSentences"
            style="@style/EditTextStyle"/>
    </LinearLayout>

    <!-- Product Price Field -->
    <LinearLayout
        android:id="@+id/product_price_field"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_editor_single_view_height"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/product_quantity_field"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/product_name_field"
        android:padding="@dimen/activity_editor_layout_padding">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/InputTitleTextViewStyle"
            android:text="@string/product_price_label"/>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:layout_gravity="">
            <EditText
                android:id="@+id/price_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_price_edit_text_hint"
                android:inputType="numberDecimal"
                style="@style/EditTextStyle"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/product_price_currency"
                style="@style/CurrencyTextViewStyle"/>
        </RelativeLayout>
    </LinearLayout>

    <!-- Product Quantity Field -->
    <LinearLayout
        android:id="@+id/product_quantity_field"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_editor_single_view_height"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/product_supplier_field"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/product_price_field"
        android:padding="@dimen/activity_editor_layout_padding">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/InputTitleTextViewStyle"
            android:text="@string/product_quantity_label"/>

        <EditText
            android:id="@+id/quantity_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/product_quantity_edit_text_hint"
            android:inputType="number"
            style="@style/EditTextStyle"/>
    </LinearLayout>

    <!-- Product Supplier Field -->
    <LinearLayout
        android:id="@+id/product_supplier_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/product_quantity_field"
        app:layout_constraintBottom_toTopOf="@id/product_category_field"
        android:padding="@dimen/activity_editor_layout_padding">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/InputTitleTextViewStyle"
            android:text="@string/product_supplier_label"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Product Supplier Name input Field -->
            <EditText
                android:id="@+id/supplier_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_editor_single_view_height"
                android:hint="@string/product_supplier_edit_text_hint_name"
                android:inputType="textCapSentences"
                style="@style/EditTextStyle"/>

            <!-- Product Supplier Phone input Field -->
            <EditText
                android:id="@+id/supplier_phone_edit_text"
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_editor_single_view_height"
                android:hint="@string/product_supplier_edit_text_hint_phone"
                android:inputType="phone"
                android:maxLength="9"
                style="@style/EditTextStyle"/>
        </LinearLayout>
    </LinearLayout>

    <!-- Product Category Field -->
    <LinearLayout
        android:id="@+id/product_category_field"
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_editor_single_view_height"
        android:orientation="horizontal"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/product_supplier_field"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="@dimen/activity_editor_layout_padding">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/InputTitleTextViewStyle"
            android:text="@string/product_category_label"/>

        <Spinner
            android:id="@+id/category_spinner"
            android:layout_width="0dp"
            android:layout_height="@dimen/activity_editor_single_view_height"
            android:layout_weight="2"
            android:spinnerMode="dropdown" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
